add new rout for analitics, for production add req-id, add integration tests, add cash logger and fix invalidate cash. Add new params for config
